# supervisor

./: .gitignore  Cargo.toml  README.md  Untitled Diagram.drawio  conf.ini  general.ini  run_test.sh  test.ini
src/: client.rs  config.rs  daemon.rs  main.rs
src/client/: command.rs  command_messages.rs  main.rs  mod.rs  net.rs  terminal.rs
src/client/command/: command_messages.rs
src/client/terminal/: ffi.rs  line_editor.rs  mod.rs  termios_ctor.rs
src/config/: config_error.rs
src/config/test/: general_no_sockfile.ini
src/lib/: config.rs  daemon.rs  lib.rs  logger.rs  output_message.rs  process_id.rs  process_status.rs  request.rs  response.rs  rpc_error.rs
src/lib/config/: autorestart.rs  config_error.rs  parser_ini.rs  (+3 more)
src/server/: control.rs  core.rs  error.rs  main.rs  mod.rs  net.rs  server.rs  supervisor.rs
src/terminal/: flushable.rs  line_editor.rs  mod.rs
test/: conf_autorestart_always.ini  conf_autorestart_never.ini  conf_autorestart_unexpected.ini  conf_autostart.ini  conf_command.ini  conf_command.sh  conf_directory.ini  conf_environment.ini  conf_exitcodes.ini  conf_numprocs.ini  conf_startsecs.ini  conf_startsecs2.ini  conf_user.ini  echo_signal.sh  eecho.sh  ign_term.c  ign_term.sh  ign_term_exit_int.sh  restart_simple_success2.ini  start_retries1.ini  start_retries2.ini  start_simple_fail.ini  start_simple_success.ini  status_before_begin2.ini  stderr_logfile.ini  stop_signal1.ini  stop_signal2.ini  stopwaitsecs1.ini  stopwaitsecs2.ini  test_main.py  test_signal.c  umask.ini  umask.sh  update_simple_modified.ini  update_simple_origin.ini
(+18 files in other folders)
