[package]
name = "supervisor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
nix = "0.26.1"
rust-ini = "0.18.0"

[patch.crates-io]
rust-ini = { path = "src/lib/config/rust-ini" }

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"
